# gdrivemgr

./: LICENSE  README.md  pyproject.toml
src/gdrivemgr/: __init__.py  manager.py
src/gdrivemgr/auth/: __init__.py  auth_info.py  oauth_client.py
src/gdrivemgr/controller/: __init__.py  drive_controller.py  fields.py
src/gdrivemgr/errors/: __init__.py  exceptions.py
src/gdrivemgr/local/: __init__.py  drive_local.py  snapshot.py  validators.py
src/gdrivemgr/models/: __init__.py  file_info.py  results.py
src/gdrivemgr/plan/: __init__.py  actions.py  operation.py  ordering.py  preconditions.py  sync_plan.py
src/gdrivemgr/util/: __init__.py  ids.py  mime.py  time.py
tests/: test_drive_integration.py  test_manager.py  test_public_api.py
tests/auth/: test_auth_auth_info.py  test_auth_oauth_client.py
tests/controller/: test_controller_drive_controller.py
tests/errors/: test_errors_exceptions.py
tests/local/: test_local_drive_local.py
tests/models/: test_models_file_info.py  test_models_results.py
tests/plan/: test_plan_acrions.py  test_plan_operation.py  test_plan_ordering.py  test_plan_preconditions.py  test_plan_sync_plan.py
tests/util/: test_util_ids.py  test_util_mime.py  test_util_time.py
